# filmspin

./: .dockerignore  .env.prod.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  api-1.json  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  robots.txt  run.py  sitemap.xml
.github/workflows/: deploy.yml
deploy/: Caddyfile
scripts/: bootstrap_prod.sh  deploy.sh  preflight_prod.sh
src/app/: dependencies.py  main.py  observability.py  schemas.py  settings.py
src/app/clients/: __init__.py  base.py  omdb_client.py  poiskkino_client.py  tmdb_client.py
src/app/core/: config.py  utils.py
src/app/repositories/: __init__.py  cache_repo.py  mapping_repo.py  recent_repo.py
src/app/routers/: config.py  genres.py  movie.py  random.py
src/app/services/: __init__.py  genres_service.py  movie_service.py  random_service.py
src/static/: 404.html  index.html
src/static/about/: index.html
src/static/css/: 404.css  base.css  cards.css  cta.css  filters.css  motion.css  responsive.css  style.css  terms.css
src/static/js/: 404.js  about.js  app.js  lang_picker.js  privacy.js  terms.js
src/static/js/modules/: http.js  i18n.js
src/static/js/modules/app/: card.js  constants.js  filters.js  helpers.js  spin_button.js  status.js
src/static/privacy/: index.html
src/static/terms/: index.html
tests/: test_api_config_metrics.py  test_filters_preview_api.py  test_imdb_filter.py  test_movie_people_extract.py  test_movie_schema.py  test_omdb_fallback.py  test_random_strategy.py  test_ru_guard.py
